Actualización de mapa
Actualización de mapa

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 	<!--contact-->
 		
-<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.39147015461!2d11.968411315519182!3d51.48768331996591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a66353e6e3b99d%3A0xd664817f7142f654!2sRadio+ Event Planner!5e0!3m2!1sen!2sin!4v1446724465130"> </iframe>
+<div class="map-grid"><iframe src="https://www.google.com/maps/place/IGLESIA+DE+LA+SAGRADA+FAMILIA/@19.4223863,-99.1610994,20.15z/data=!4m5!3m4!1s0x85d1ff30dd34ffef:0x61480dae64c6760b!8m2!3d19.42248!4d-99.1609903"> </iframe>
 					</div>
 
 				<!--footer-->
@@ -313,7 +313,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  <h2><a href="index.html">03.08.2019</a></h2>
 		  <div class="buttom-para">
 		  <p>" El amor no tiene que ver con lo que esperas conseguir, </p>
-		  <p>solo con lo que esperar dar; es decir todo " - Julio Cortázar</p>
+		  <p>sólo con lo que esperar dar; es decir todo " - Julio Cortázar</p>
 		  </div>
 		</div>
 <div class=" text-center">
