--- a/index.html
+++ b/index.html
@@ -302,9 +302,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- //gallery -->
 
 	<!--contact-->
-	
 		
-<div class="map-grid"><iframe src="https://www.google.com/maps/place/IGLESIA+DE+LA+SAGRADA+FAMILIA/@19.4223863,-99.1610994,20.15z/data=!4m5!3m4!1s0x85d1ff30dd34ffef:0x61480dae64c6760b!8m2!3d19.42248!4d-99.1609903"> </iframe>
+<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423.89962073340496!2d-99.16109944446931!3d19.422386324161987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff30dd34ffef%3A0x61480dae64c6760b!2sIGLESIA+DE+LA+SAGRADA+FAMILIA!5e0!3m2!1sen!2smx!4v1559685818758!5m2!1sen!2smx"> </iframe>
 					</div>
 
 				<!--footer-->
