--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			         
 					</p>
 					<div class="bar-grids">
-				<h6>Weddings<span> 100% </span></h6>
+				<h6>Love<span> 100% </span></h6>
 				<div class="progress">
 					<div class="progress-bar progress-bar-striped active" style="width: 100%">
 					</div>
