Actualización texto about
Actualización texto about

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<nav>
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="#about" class="scroll">About</a></li>
-						<li><a href="#gallery" class="scroll">Gallery</a></li>
+						<li><a href="#about" class="scroll">Nosotros</a></li>
+						<li><a href="#gallery" class="scroll">Fotos</a></li>
 					</ul>
 				</nav>
 
@@ -138,13 +138,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3 class="title">Nosotros</h3>
 		<div class="about-top-grids">
 				<div class="col-md-8 about-top-grid">
-					<h4>Los novios
+					<h4>Paulina & Alberto
 					</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed odio consequat, tristique elit sed, molestie nulla. 
-						Mauris et quam leo. Quisque tincidunt facilisis rutrum. Etiam mattis arcu vitae velit sagittis vehicula. Duis posuere 
-						ex in mollis iaculis. Suspendisse tincidunt ut velit id euismod.vulputate turpis porta ex sodales, dignissim hendrerit 
-						eros sagittis. Curabitur lacinia dui ut luctus congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis 
-			         
+					<p> El amor nació entre nosotros y fue creciendo cada día, hasta llegar a este
+						momento en el cual decidimos unir nuestras vidas en santo matrimonio para
+						la eternidad.
 					</p>
 					<div class="bar-grids">
 				<h6>Love<span> 100% </span></h6>
