Se agrega foto a la galería
Se agrega foto a la galería

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</h4>
 					<p> El amor nació entre nosotros y fue creciendo cada día, hasta llegar a este
 						momento en el cual decidimos unir nuestras vidas en santo matrimonio para
-						la eternidad.
+						la eternidad. Es un honor invitarlos a nuestra celebración el día 3 de Agosto de 2019.
 					</p>
 					<div class="bar-grids">
 				<h6>Love<span> 100% </span></h6>
@@ -191,11 +191,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!-- gallery -->
 
 		<div id="gallery" class="gallery"> 
-		<h3 class="title">Gallery</h3> 
+		<h3 class="title">Fotos</h3> 
 		<div class="gallery-w3lsrow">
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/g1.jpg" data-lightbox="example-set" data-title="En el lugar donde nos comprometimos.">
 						<img src="images/g1.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
