--- a/index.html
+++ b/index.html
@@ -290,19 +290,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 	<!--contact-->
 
-<div id="map">
+<div id="map" class="about">
+	<div class="container">
 
-<h3 class="title">¿Cómo llegar?</h3> 
+		<div class="about-top-grids">
 
-<h4>Parroquia de la sagrada familia</h4>
-		
-<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423.89962073340496!2d-99.16109944446931!3d19.422386324161987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff30dd34ffef%3A0x61480dae64c6760b!2sIGLESIA+DE+LA+SAGRADA+FAMILIA!5e0!3m2!1sen!2smx!4v1559685818758!5m2!1sen!2smx"> </iframe>
-					</div>
+			<h3 class="title">¿Cómo llegar?</h3> 
 
-<h4>WTC Mexiquense</h4>
+			<div class="about-top-grid">
 
-<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6225.550465819946!2d-99.2398531129612!3d19.49840666711322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d202dff7f2e537%3A0xd0fb88994f83a985!2sWTC+Mexiquense!5e0!3m2!1sen!2smx!4v1559687352742!5m2!1sen!2smx"> </iframe>
-					</div>
+				<h4>Parroquia de la Sagrada Familia</h4>
+						
+				<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423.89962073340496!2d-99.16109944446931!3d19.422386324161987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff30dd34ffef%3A0x61480dae64c6760b!2sIGLESIA+DE+LA+SAGRADA+FAMILIA!5e0!3m2!1sen!2smx!4v1559685818758!5m2!1sen!2smx"> </iframe>
+									</div>
+
+				<h4>WTC Mexiquense</h4>
+
+				<div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6225.550465819946!2d-99.2398531129612!3d19.49840666711322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d202dff7f2e537%3A0xd0fb88994f83a985!2sWTC+Mexiquense!5e0!3m2!1sen!2smx!4v1559687352742!5m2!1sen!2smx"> </iframe>
+				</div>
+			</div>
+		</div>
+	 </div>
 </div>
 				<!--footer-->
 				<div class="buttom-w3">
