Cambio descripción foto
Cambio descripción foto

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g1.jpg" data-lightbox="example-set" data-title="En el lugar donde nos comprometimos.">
 						<img src="images/g1.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
-							<h5>Las Vegas</h5>
+							<h5>Pau & Beto</h5>
 						
 						</div>
 					</a>
