--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li>
 					
 						<div class="slider-info">
-							<h4>Felices por Siempte</h4>
-						    <p>Pau & Beto</p>
+							<h4>La boda del año</h4>
+						    <p>The New York Times</p>
 							
 						</div>
 					</li>
