Se agrega mesa de regalos
Se agrega mesa de regalos

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#about" class="scroll">Nosotros</a></li>
 						<li><a href="#gallery" class="scroll">Fotos</a></li>
 						<li><a href="#map" class="scroll">¿Cómo llegar?</a></li>
+						<li><a href="#gifts" class="scroll">Mesa de Regalos</a></li>
 					</ul>
 				</nav>
 
@@ -312,6 +313,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	 </div>
 </div>
+
+<div id="gifts">
+	<div class="container">
+		<h3 class="title">Mesa de regalos</h3> 
+		<div class="about-top-grid">
+			<a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/50144639" target="_blank"><img src="images/liverpool.png" width="300px" height="100px">Número de evento: 50144639</a>
+		</div>
+	</div>
+</div>
+
 				<!--footer-->
 				<div class="buttom-w3">
 				<div class="container">
@@ -332,7 +343,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><a href="#"><span class="fa fa-facebook"></span></a></li>
 								<li><a href="#"><span class="fa fa-twitter"></span></a></li>
 								<li><a href="#"><span class="fa fa-rss"></span></a></li>
-								<li><a href="#"><span class="fa fa-vk"></span></a></li>
 							</ul>
 						</div>
 
