--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 				<nav>
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="index.html">Inicio</a></li>
 						<li><a href="#about" class="scroll">Nosotros</a></li>
 						<li><a href="#gallery" class="scroll">Fotos</a></li>
 						<li><a href="#map" class="scroll">¿Cómo llegar?</a></li>
@@ -126,7 +126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--counter-->
 	<div class="days-coming">
 		<div class="container">
-		<h3 class="title tittle">The Wedding Day</h3>
+		<h3 class="title2 tittle">Faltan</h3>
 			<div class="timer_wrap">
 			<div id="counter"></div>
 			<div class="clear fix"></div>
@@ -317,7 +317,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div id="gifts">
 	<div class="container">
 		<h3 class="title">Mesa de regalos</h3> 
-		<div class="about-top-grid">
+		<div class="liverpool">
 			<a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/50144639" target="_blank"><img src="images/liverpool.png" width="300px" height="100px">Número de evento: 50144639</a>
 		</div>
 	</div>
