--- a/index.html
+++ b/index.html
@@ -142,9 +142,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-8 about-top-grid">
 					<h4>Paulina & Alberto
 					</h4>
-					<p> El amor nació entre nosotros y fue creciendo cada día, hasta llegar a este
-						momento en el cual decidimos unir nuestras vidas en santo matrimonio para
-						la eternidad. Es un honor invitarlos a nuestra celebración el día 3 de Agosto de 2019.
+					<p> Fue una casualidad encontrarnos de pronto comenzamos a salir, pasarla increíble, reír y compartir nuestras tardes; de pronto el amor nació entre nosotros y fue creciendo cada día hasta llegar a este momento en el cual decidimos unir nuestras vidas.
+					<br><br>
+					Planeamos unas vacaciones y fue ahí que nos comprometimos el 09 de Diciembre, 
+					para nosotros es un placer invitarlos a nuestro ¡Gran Día! el 03 de Agosto de 2019.
+					Estamos muy felices de poder compartir con todos ustedes; queremos que ese día cantes, bailes, rias y disfrutes a lo máximo.
+					<br><br>
+					Gracias por ser parte de nuestra celebración de AMOR.
 					</p>
 					<div class="bar-grids">
 				<h6>Love<span> 100% </span></h6>
