--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-8 about-top-grid">
 					<h4>Paulina & Alberto
 					</h4>
-					<p> Fue una casualidad encontrarnos de pronto comenzamos a salir, pasarla increíble, reír y compartir nuestras tardes; de pronto el amor nació entre nosotros y fue creciendo cada día hasta llegar a este momento en el cual decidimos unir nuestras vidas.
+					<p> Fue una casualidad encontrarnos, comenzamos a salir, pasarla increíble, reír y compartir nuestras tardes; de pronto el amor nació entre nosotros y fue creciendo cada día hasta llegar a este momento en el cual decidimos unir nuestras vidas.
 					<br><br>
 					Planeamos unas vacaciones y fue ahí que nos comprometimos el 09 de Diciembre, 
 					para nosotros es un placer invitarlos a nuestro ¡Gran Día! el 03 de Agosto de 2019.
@@ -346,7 +346,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<ul>
 								<li><a href="#"><span class="fa fa-facebook"></span></a></li>
 								<li><a href="#"><span class="fa fa-twitter"></span></a></li>
-								<li><a href="#"><span class="fa fa-rss"></span></a></li>
+								<li><a href="images/thanos.gif"><img src="images/thanos.png" class="thanos"></a></li>
 							</ul>
 						</div>
 
