--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class=" copyright text-center">
 			    			<div class="icons">
 							<ul>
-								<li><a href="images/thanos.gif"><img src="images/thanos.png" class="thanos"></a></li>
+								<li><a href="thanos.html"><img src="images/thanos.png" class="thanos"></a></li>
 							</ul>
 						</div>
 
