--- a/thanos.html
+++ b/thanos.html
@@ -13,7 +13,7 @@
 
 </br>
 
-<img src="images/spiderDance.gif" class="party">
+<img src="images/spiderDance.gif" class="spidey">
 
 <audio autoplay loop>
     <source src="audio/rebota.mp3" type="audio/mp3">
