--- a/thanos.html
+++ b/thanos.html
@@ -15,7 +15,7 @@
 
 <img src="images/spiderDance.gif" class="spidey">
 
-<audio autoplay loop>
+<audio autoplay loop controls class="party">
     <source src="audio/rebota.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio> 
