--- a/thanos.html
+++ b/thanos.html
@@ -6,11 +6,14 @@
 
 
 <div class=" text-center">
-<a href="index.html"><img src="images/back_button.png" class="partyBack"></a>
-        <audio autoplay loop controls>
-        <source src="audio/rebota.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-      </audio> 
+
+<div class="partyBack">
+    <a href="index.html"><img src="images/back_button.png"></a>
+            <audio autoplay loop controls>
+            <source src="audio/rebota.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+</div> 
 </br>
 
 <img src="images/thanos.gif" class="party">
