--- a/thanos.html
+++ b/thanos.html
@@ -7,12 +7,17 @@
 
 <div class=" text-center">
 
-<div class="partyBack">
-    <a href="index.html"><img src="images/back_button.png"></a>
+<div class="partyRow">
+
+    <div class="partyColumn">
+        <a href="index.html"><img src="images/back_button.png"></a>
+    </div>
+    <div class="partyColumn">
             <audio autoplay loop controls>
             <source src="audio/rebota.mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
+    </div>
 </div> 
 </br>
 
