--- a/thanos.html
+++ b/thanos.html
@@ -2,6 +2,13 @@
     <title>Mamarre Mamarre</title>
 
     <link href="css/style.css" rel='stylesheet' type='text/css' media="all">
+
+    <style>
+            body {
+              background-image: url("images/neonbg.jpg");
+              background-repeat: repeat;
+            }
+            </style>
 </head>
 
 
