--- a/thanos.html
+++ b/thanos.html
@@ -5,7 +5,7 @@
 
     <style>
             body {
-              background-image: url("images/neonbg.jpg");
+              background-image: url("images/brepeat.jpg");
               background-repeat: repeat;
             }
             </style>
