Cambios texto imágenes
Cambios texto imágenes

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="gallery-w3lsrow">
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/g1.jpg" data-lightbox="example-set" data-title="En el lugar donde nos comprometimos.">
+					<a href="images/g1.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/g1.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -212,7 +212,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/p1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/p1.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/p1.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -223,7 +223,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/p2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/p2.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/p2.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -234,7 +234,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/g2.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/g2.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -245,7 +245,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/g3.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/g3.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -256,7 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/g5.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/g5.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -267,7 +267,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/p4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/p4.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/p4.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
@@ -278,7 +278,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-3 col-xs-6 gallery-grids">
 				<div class="w3ls-hover">
-					<a href="images/p3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+					<a href="images/p3.jpg" data-lightbox="example-set" data-title="...">
 						<img src="images/p3.jpg" class="img-responsive zoom-img" alt="">
 						<div class="view-caption">
 							<h5>Pau & Beto</h5>
